--- a/app/views/products.html
+++ b/app/views/products.html
@@ -6,30 +6,11 @@
 		</div>
 
 		<ul class="indicators">
-			<li ng-repeat="i in [products.length]" ng-click="$parent.productsIndex = $index">&bull;</li>
-		</div>
+			<li ng-repeat="i in products" ng-click="$parent.productsIndex = $index">&bull;</li>
+		</ul>
 
 		<div class="carousel-container">
-			<ul rn-carousel rn-carousel-indicator>
-				<li ng-repeat="product in products">
-					<product product="product"></product>
-				</li>
-			</ul>
-		</div>
-	</div>
-</div>
-
-<div class="row">
-	<div class="small-12 columns">
-		<div class="hero">
-			<h2>We've got awesome products</h2>
-			<p>Here they are!</p>
-		</div>
-
-		
-
-		<div class="carousel-container">
-			<ul rn-carousel rn-carousel-index="productsIndex">
+			<ul rn-carousel>
 				<li ng-repeat="product in products">
 					<product product="product"></product>
 				</li>
