--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,10 +1,16 @@
 // bower:scss
 // endbower
 
-// GET FOUNDATION FUNCTIONS PLS
+// GET FOUNDATION FUNCTIONS PLS //
 @import '../../bower_components/foundation/scss/foundation/functions';
 
-// NAVIGATION
+// EXPO CUBIC BEZIERS //
+
+$easeOutExpo   : cubic-bezier(0.190, 1.000, 0.220, 1.000);
+$easeInExpo    : cubic-bezier(0.950, 0.050, 0.795, 0.035);
+$easeInOutExpo : cubic-bezier(1.000, 0.000, 0.000, 1.000);
+
+// NAVIGATION //
 
 .bar{
   width: 100%;
@@ -49,3 +55,4 @@
   position: fixed;
   z-index: 9999;
 }
+
