--- a/app/views/products.html
+++ b/app/views/products.html
@@ -1,18 +1,18 @@
 <div class="row">
 	<div class="small-12 columns">
 		<div class="hero">
-			<h2>We've got awesome products</h2>
-			<p>Here they are!</p>
+			<h2>We're proud of our best sellers</h2>
+			<p>And we think you'll be able to pick the perfect product for you.</p>
 		</div>
 
-		<ul class="indicators">
+		<!-- <ul class="indicators">
 			<li ng-repeat="i in products" ng-click="$parent.productsIndex = $index">&bull;</li>
-		</ul>
+		</ul> -->
 
 		<div class="carousel-container">
 			<ul rn-carousel>
 				<li ng-repeat="product in products">
-					<product product="product"></product>
+					<product product="product" states="states"></product>
 				</li>
 			</ul>
 		</div>
