--- a/app/views/products.html
+++ b/app/views/products.html
@@ -1,20 +1,5 @@
 <div class="row">
-	<div class="small-12 columns">
-		<div class="hero">
-			<h2>We're proud of our best sellers</h2>
-			<p>And we think you'll be able to pick the perfect product for you.</p>
-		</div>
-
-		<!-- <ul class="indicators">
-			<li ng-repeat="i in products" ng-click="$parent.productsIndex = $index">&bull;</li>
-		</ul> -->
-
-		<div class="carousel-container">
-			<ul rn-carousel>
-				<li ng-repeat="product in products">
-					<product product="product" states="states"></product>
-				</li>
-			</ul>
-		</div>
+	<div class="small-12 columns" ui-view>
+		
 	</div>
 </div>
