phew done a lot today

--- a/app/views/join.html
+++ b/app/views/join.html
@@ -1,1 +1,5 @@
-<p>This is the join view.</p>
+<form ng-submit="process(joinForm.$valid)" name="joinForm" novalidate>
+	
+	<div ui-view></div>
+
+</form>
