visual stuff started

--- a/app/views/product.html
+++ b/app/views/product.html
@@ -3,7 +3,7 @@
 		<div class="summary">
 			<header>
 				<h2>{{product.name}}</h2>
-				<h4>${{ weeklyPrice() }}/week</h4>
+				<h4>{{ weeklyPrice() }}/week</h4>
 			</header>
 			<div class="short-desc">
 				{{product.description}}
