visual styles galore

--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -14,6 +14,10 @@ $yellow : #fff089;
 $green  : #6bcb97;
 $grey   : #acacac;
 
+// SECONDARY COLOURS //
+
+$dark-yellow : #ffb50a;
+
 // FONTS OH YES //
 @font-face {
   font-family: Glypha;
