--- a/app/views/colour-bar.html
+++ b/app/views/colour-bar.html
@@ -5,5 +5,5 @@
 	<div class="blue">&nbsp;</div>
 	<div class="yellow">&nbsp;</div>
 	<div class="green">&nbsp;</div>
-	<div class="white">&nbsp;</div>
+	<div class="grey">&nbsp;</div>
 </div>
