--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,1 +1,10 @@
-<p>This is the contact view.</p>
+<section class="middle-align hero">
+	<div class="row">
+		<div class="small-12 columns">
+			<h1>Got questions?</h1>
+			<h3>1300 199 802</h3>
+			<p>Feel free to give our friendly local staff a call, who are more than happy to answer any questions you may have!</p>
+			<p><a href="mailto:sales@health.com.au" class="button">Email us</a></p>
+		</div>
+	</div>	
+</section>
