--- a/app/views/product.html
+++ b/app/views/product.html
@@ -1,11 +1,10 @@
-<div class="product directive">
+<div class="product-card directive">
 	<div class="mask" ng-class="{ 'detailsVisible' : showDetails }">
 		<div class="summary">
-			<header>
+			<header class="small-12 columns">
 				<h2>{{product.name}}</h2>
-				<h4>{{ weeklyPrice() }}/week</h4>
 			</header>
-			<div class="short-desc">
+			<div class="short-desc small-12 columns">
 				{{product.description}}
 				<p>
 					This covers everything except for: 
@@ -13,6 +12,7 @@
 					and {{ hospitals('notcovered').length - 3 }} others services.
 				</p>
 				<p>
+					<h4>{{ weeklyPrice() }}/week</h4>
 					<a ng-hide="priced" ng-click="getUserDetails()" class="button">Get exact price</a>
 					<a ng-show="priced" ng-click="joinNow()" class="button">Buy now</a>
 				</p>
@@ -20,7 +20,7 @@
 		</div>
 		<div class="details">
 			<tabset>
-				<tab heading="Hospital Cover">
+				<tab heading="Hospital">
 					<p>This product does not cover:</p>
 					<ul class="notcovered no-bullet">
 						<li ng-repeat="h in hospitals('notcovered')"><i class="fa fa-times"></i> {{ h.type }}</li>
