--- a/app/views/nav-bar.html
+++ b/app/views/nav-bar.html
@@ -1,4 +1,4 @@
-<nav class="bottom bar">
+<nav class="bottom bar" ng-class="{ 'scrolled' : showBar }">
   <ul>
     <li ui-sref-active="active"><a ui-sref="home">
       <i class="fa fa-home"></i>
