--- a/app/views/whyus.html
+++ b/app/views/whyus.html
@@ -1,1 +1,47 @@
-<p>This is the whyus view.</p>
+<section class="happy-customers middle-align">
+	<div class="row">
+		<div class="small-12 columns">
+			<h2>Why us? We've got the happiest customers!</h2>
+			<p>We are pleased to announce we won the ServiceRage Happy Customer Award for 2014. Thanks so much to our incredible staff and our amazing customers for making it possible!</p>
+			<p><img src="images/service-rage.svg" width="100px" alt=""></p>
+		</div>
+	</div>
+</section>
+
+<section class="middle-align">
+	<div class="row">
+		<div class="small-12 columns">
+			<h2>Health insurance made easy</h2>
+			<p>We’re a new sort of health insurance, and we’ve got some of the best people in the business behind us. Our team has more than 100 collective years of experience in the big corporate health insurers you know. But, we are doing it differently! We are making health insurance that is easier to understand, better value and above all: human. This is the health insurance that we want ourselves.</p>
+		</div>
+	</div>
+</section>
+
+<section class="middle-align">
+	<div class="row">
+		<div class="small-12 columns">
+			<h2>Simple = better</h2>
+			<p>Every aspect of using health.com.au is simple – from selecting your health insurance policy to making a claim. Our policies are designed to deliver great value in a very straightforward, easy to understand way that enables you to take control of your health with minimal fuss.</p>
+			<a ui-sref="products.view" class="button">Our products</a>
+		</div>
+	</div>
+</section>
+
+<section class="middle-align">
+	<div class="row">
+		<div class="small-12 columns">
+			<h2>We love online</h2>
+			<p>We don’t want to send receipts in by snail mail, and we definitely don’t want to visit anyone’s shop to wait inline and fill out forms. We are online, like you. Our aim is that you can do it all online whenever you want, and that means less hassle.</p>
+		</div>
+	</div>
+</section>
+
+<section class="middle-align">
+	<div class="row">
+		<div class="small-12 columns">
+			<h2>Customer Service with a heart</h2>
+			<p>When you need to speak with someone, we are here for you. No outsourced call centre for us. We are proud to be redefining customer service expectations – not just for health insurance but in all Australian industries.</p>
+			<a ui-sref="products.view" class="button">Our products</a>
+		</div>
+	</div>
+</section>
