--- a/app/views/view-products.html
+++ b/app/views/view-products.html
@@ -6,7 +6,7 @@
 
 <div class="carousel-container">
 	<p class="loading" ng-hide="productsLoaded">Loading...</p>
-	<ul rn-carousel rn-carousel-indicator ng-show="productsLoaded">
+	<ul rn-carousel rn-carousel-indicator rn-carousel-index="slideIndex" ng-show="productsLoaded">
 		<li ng-repeat="product in products">
 			<product product="product" states="states"></product>
 		</li>
