--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -28,10 +28,10 @@ $product-grey   : #404040;
 // FONTS OH YES //
 @font-face {
   font-family: Glypha;
-  src:  url('fonts/GlyphaBlack.eot?#iefix') format('embedded-opentype'), 
-		    url('fonts/GlyphaBlack.woff') format('woff'), 
-		    url('fonts/GlyphaBlack.ttf')  format('truetype'),
-		    url('fonts/GlyphaBlack.svg#svgFontName') format('svg');
+  src:  url('../fonts/GlyphaBlack.eot?#iefix') format('embedded-opentype'), 
+		    url('../fonts/GlyphaBlack.woff') format('woff'), 
+		    url('../fonts/GlyphaBlack.ttf')  format('truetype'),
+		    url('../fonts/GlyphaBlack.svg#svgFontName') format('svg');
 	font-weight: 700;
 }
 
@@ -39,40 +39,40 @@ $product-grey   : #404040;
 
 @font-face {
   font-family: ProximaNova;
-  src:  url('fonts/ProximaNova-Light.eot?#iefix') format('embedded-opentype'), 
-		    url('fonts/ProximaNova-Light.woff') format('woff'), 
-		    url('fonts/ProximaNova-Light.ttf')  format('truetype'),
-		    url('fonts/ProximaNova-Light.svg#svgFontName') format('svg');
+  src:  url('../fonts/ProximaNova-Light.eot?#iefix') format('embedded-opentype'), 
+		    url('../fonts/ProximaNova-Light.woff') format('woff'), 
+		    url('../fonts/ProximaNova-Light.ttf')  format('truetype'),
+		    url('../fonts/ProximaNova-Light.svg#svgFontName') format('svg');
 
 	font-weight: 200;
 }
 
 @font-face {
   font-family: ProximaNova;
-  src:  url('fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'), 
-		    url('fonts/ProximaNova-Regular.woff') format('woff'), 
-		    url('fonts/ProximaNova-Regular.ttf')  format('truetype'),
-		    url('fonts/ProximaNova-Regular.svg#svgFontName') format('svg');
+  src:  url('../fonts/ProximaNova-Regular.eot?#iefix') format('embedded-opentype'), 
+		    url('../fonts/ProximaNova-Regular.woff') format('woff'), 
+		    url('../fonts/ProximaNova-Regular.ttf')  format('truetype'),
+		    url('../fonts/ProximaNova-Regular.svg#svgFontName') format('svg');
 
 	font-weight: 300;
 }
 
 @font-face {
   font-family: ProximaNova;
-  src:  url('fonts/ProximaNova-Semibold.eot?#iefix') format('embedded-opentype'), 
-		    url('fonts/ProximaNova-Semibold.woff') format('woff'), 
-		    url('fonts/ProximaNova-Semibold.ttf')  format('truetype'),
-		    url('fonts/ProximaNova-Semibold.svg#svgFontName') format('svg');
+  src:  url('../fonts/ProximaNova-Semibold.eot?#iefix') format('embedded-opentype'), 
+		    url('../fonts/ProximaNova-Semibold.woff') format('woff'), 
+		    url('../fonts/ProximaNova-Semibold.ttf')  format('truetype'),
+		    url('../fonts/ProximaNova-Semibold.svg#svgFontName') format('svg');
 
 	font-weight: 400;
 }
 
 @font-face {
   font-family: ProximaNova;
-  src:  url('fonts/ProximaNova-Bold.eot?#iefix') format('embedded-opentype'), 
-		    url('fonts/ProximaNova-Bold.woff') format('woff'), 
-		    url('fonts/ProximaNova-Bold.ttf')  format('truetype'),
-		    url('fonts/ProximaNova-Bold.svg#svgFontName') format('svg');
+  src:  url('../fonts/ProximaNova-Bold.eot?#iefix') format('embedded-opentype'), 
+		    url('../fonts/ProximaNova-Bold.woff') format('woff'), 
+		    url('../fonts/ProximaNova-Bold.ttf')  format('truetype'),
+		    url('../fonts/ProximaNova-Bold.svg#svgFontName') format('svg');
 
 	font-weight: 500;
 }
