--- a/app/views/product.html
+++ b/app/views/product.html
@@ -2,26 +2,26 @@
 	<div class="mask" ng-class="{ 'detailsVisible' : showDetails }">
 		<div class="summary">
 			<header class="small-12 columns">
-				<h2>{{product.name}}</h2>
+				<h2>{{product.nicename}}</h2>
 			</header>
 			<div class="short-desc small-12 columns">
 				{{product.description}}
-				<p>
+				<!-- <p>
 					This covers everything except for: 
 					<span ng-repeat="h in hospitals('notcovered') | limitTo:3 ">{{ h.type }}, </span>
 					and {{ hospitals('notcovered').length - 3 }} others services.
-				</p>
+				</p> -->
 				<p>
 					<h4>{{ weeklyPrice() }}/week</h4>
-					<a ng-hide="priced" ng-click="getUserDetails()" class="button">Get exact price</a>
-					<a ng-show="priced" ng-click="joinNow()" class="button">Buy now</a>
+					<a ng-hide="priced" ng-click="getUserDetails()" class="button">Quote me</a>
+					<a ng-show="priced" ng-click="joinNow()" class="button">Join</a>
 				</p>
 			</div>
 		</div>
 		<div class="details">
 			<tabset>
 				<tab heading="Hospital">
-					<p>This product does not cover:</p>
+					<p>This product covers EVERYTHING except:</p>
 					<ul class="notcovered no-bullet">
 						<li ng-repeat="h in hospitals('notcovered')"><i class="fa fa-times"></i> {{ h.type }}</li>
 					</ul>
@@ -29,7 +29,7 @@
 					<ul class="restricted no-bullet">
 						<li ng-repeat="h in hospitals('restrictedcover')"><i class="fa fa-exclamation-triangle"></i> {{ h.type }}</li>
 					</ul>
-					<p>Some of the things it does cover:</p>
+					<p>This product covers:</p>
 					<ul class="covered no-bullet">
 						<li ng-repeat="h in hospitals('covered')"><i class="fa fa-check"></i> {{ h.type }}</li>
 					</ul>
