--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -4,5 +4,6 @@
 		<h3><a href="tel:1300 199 802">1300 199 802</a></h3>
 		<p>Feel free to give our friendly local staff a call, who are more than happy to answer any questions you may have!</p>
 		<p><a href="mailto:sales@health.com.au" class="button">Email us</a></p>
+		<p><a ng-click="openLivechat()" class="button">Livechat</a></p>
 	</div>
 </div>
