--- a/app/views/product.html
+++ b/app/views/product.html
@@ -1,8 +1,8 @@
-<div class="product-card directive">
+<div class="product-card directive {{ product.nicename | slugify }}">
 	<div class="mask" ng-class="{ 'detailsVisible' : showDetails }">
 		<div class="summary">
 			<header class="small-12 columns">
-				<h2>{{product.nicename}}</h2>
+				<h2 class="tk-phoreuscherokee">{{product.nicename}}</h2>
 			</header>
 			<div class="short-desc small-12 columns">
 				{{product.description}}
