--- a/app/views/view-products.html
+++ b/app/views/view-products.html
@@ -2,7 +2,7 @@
 	<p class="loading" ng-hide="productsLoaded">Loading...</p>
 	 <!-- rn-carousel-index="slideIndex" -->
 	<ul rn-carousel rn-carousel-indicator ng-show="productsLoaded">
-		<li ng-repeat="product in products">
+		<li ng-repeat="product in visibleProducts">
 
 			<product ng-if="product.name !== 'empty'" product="product" states="states"></product>
 
