--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,9 +1,6 @@
 <div class="row">
 	<div class="small-12 columns">
 		<h1>Got questions?</h1>
-		<h3><a href="tel:1300 199 802">1300 199 802</a></h3>
-		<p>Feel free to give our friendly local staff a call, who are more than happy to answer any questions you may have!</p>
-		<p><a href="mailto:sales@health.com.au" class="button">Email us</a></p>
-		<p><a ng-click="openLivechat()" class="button">Livechat</a></p>
+		<contact-block></contact-block>
 	</div>
 </div>
