--- a/app/views/home.html
+++ b/app/views/home.html
@@ -58,21 +58,11 @@
 	</div>
 </section>
 
-<section class="middle-align">
+<section class="contact">
 	<div class="row">
 		<div class="small-12 columns">
-			<h3>Let's have a chat!</h3>
-	        <p>Give us a call, or live chat with us to discuss what we can do for you.</p>
-	        <p>
-	          <a href="tel:130000000" class="button">Call us</a> 
-	          <a href="sms:+64231231" class="button">SMS us</a>
-	        </p>
-	        <p>
-	          <a class="button">Livechat</a>
-	        </p> 
-	        <p>
-	          <a ui-sref="quote.get" class="button">Get a quote</a>
-	        </p>
+			<h2>Get in touch!</h2>
+			<contact-block></contact-block>
 		</div>
 	</div>
 </section>
